[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "submit_to_images"
version = "0.1.0"
description = "High-throughput PDF to image queue built with Rust and PyO3."
requires-python = ">=3.10"

[tool.maturin]
module-name = "submit_to_images.submit_to_images_native"
python-source = "python"
features = ["pyo3/extension-module"]
